--- a/CubivoxServer/CubivoxServer.csproj
+++ b/CubivoxServer/CubivoxServer.csproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+	  <LangVersion>10.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CubivoxCore\CubivoxCore.csproj" />
+    <ProjectReference Include="..\CubivoxCore\CubivoxCore.csproj" />
   </ItemGroup>
 
 </Project>
